--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server",
     "server": "node server.js",
     "precommit": "lint-staged",
-    "format":"prettier --single-quote --trailing-comma es5 --write \"src/**/*.{js,jsx,ts,tsx,scss,css}\"",
+    "format": "prettier --single-quote --trailing-comma es5 --write \"src/**/*.{js,jsx,ts,tsx,scss,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
@@ -38,6 +38,7 @@
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.14",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
     "prettier": "1.14.3",
     "react-hot-loader": "^4.3.11",
