--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   "dependencies": {
     "anujs": "^1.4.8",
     "lodash": "^4.17.11",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0"
+    "proptypes": "^1.1.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
