mobx project demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,14 @@
     "jsx": "react",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true, // 启用装饰器
+    "experimentalDecorators": true,
     "strictNullChecks": false,
     "outDir": "dist",
     "strict": false,
-    "allowSyntheticDefaultImports": true, // 不用写import * as A from {A} ，直接写import A from {A}
+    "allowSyntheticDefaultImports": true,
     "watch": true,
     "types": ["webpack-env"],
-    "lib": ["es2017", "dom"] // 解决asyn await 的兼容
+    "lib": ["es2017", "dom"]
   },
   "exclude": ["dist", "node_modules"],
   "include": ["./src/**/*.ts", "./src/**/*.tsx"]
