--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "author": "",
   "license": "ISC",
+  "basePath": "./src",
   "devDependencies": {
+    "node-sass": "^4.9.4",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.0.3",
+    "chalk": "^2.4.1",
+    "commander": "^2.19.0",
+    "fs-extra": "^7.0.1",
+    "invariant": "^2.2.4",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
@@ -33,6 +41,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
     "eslint-loader": "^2.1.1",
+    "autoprefixer": "^8.6.2",
     "eslint-plugin-typescript": "^0.13.0",
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
@@ -55,10 +64,13 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "anujs": "^1.4.8",
     "lodash": "^4.17.11",
     "proptypes": "^1.1.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
+    "react-router": "^3.2.0",
+    "zone.js": "^0.8.28"
   }
 }
