--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.4",
     "webpack-visualizer-plugin": "^0.1.11"
   },
