--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,19 @@
 {
-  "presets": ["env", "stage-0", "react"],
-  "plugins": ["transform-runtime", "react-hot-loader/babel"]
+  "presets": [
+    "env",
+    "stage-0",
+    "react"
+  ],
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ],
+    "react-hot-loader/babel"
+  ]
 }
